CSS/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
* {
  box-sizing: border-box;
}
html {
  font-family: 'Open Sans', sans-serif;
  font-size: 62.5%;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}
h1 {
  font-size: 2.4rem;
}
h2 {
  font-size: 2rem;
}
p,
a,
td {
  font-size: 1.6rem;
}
.container {
  margin: 0 auto;
  max-width: 100vw;
  height: 100vh;
  margin-top: 46px;
}
@media (max-width: 500px) {
  .container {
    margin-top: 40px;
  }
}
header {
  width: 100%;
  display: flex;
  background-color: purple;
  position: fixed;
  top: 0;
  z-index: 100;
  box-shadow: 0px 1px 5px grey;
  border-bottom: solid black 1px;
  justify-content: flex-end;
}
@media (max-width: 800px) {
  header {
    justify-content: center;
  }
}
@media (max-width: 500px) {
  header {
    flex-direction: column;
  }
}
header nav {
  display: flex;
}
@media (max-width: 500px) {
  header nav {
    flex-direction: column;
    align-items: center;
  }
}
header .page-links {
  padding: 15px;
  text-decoration: none;
  color: white;
  cursor: pointer;
}
header .page-links:hover {
  text-decoration: underline;
}
@media (max-width: 500px) {
  header .page-links {
    display: none;
    width: 100%;
    text-align: center;
  }
  header .page-links:first-child {
    border-top: solid black 1px;
    border-bottom: solid black 1px;
  }
}
header .reveal-page-links {
  display: block;
}
header .button-mobile {
  color: white;
  padding: 5px 0;
  display: none;
}
@media (max-width: 500px) {
  header .button-mobile {
    display: flex;
    justify-content: center;
    cursor: pointer;
    width: 100%;
  }
}
footer {
  background-color: rgba(118, 54, 148, 0.8);
  text-align: center;
  padding: 2rem 0;
  margin: 2rem 0;
  width: 100%;
}
.rosary-prayers,
.prayer-each-day,
.pope-st-gregory {
  max-width: 900px;
}
@media (max-width: 800px) {
  .rosary-prayers,
  .prayer-each-day,
  .pope-st-gregory {
    margin: 0 8%;
  }
}
@media (max-width: 500px) {
  .rosary-prayers,
  .prayer-each-day,
  .pope-st-gregory {
    margin: 0 5%;
  }
}
.rosary-prayers-header,
.prayer-each-day-header,
.pope-st-gregory-header {
  margin-top: 2rem;
  border-bottom: solid black 1px;
}
@media (max-width: 800px) {
  .rosary-prayers-header,
  .prayer-each-day-header,
  .pope-st-gregory-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
    background: rgba(118, 54, 148, 0.2);
    padding: 10px;
    border-radius: 15px;
    border-bottom: 0;
  }
  .rosary-prayers-header:hover,
  .prayer-each-day-header:hover,
  .pope-st-gregory-header:hover {
    border: 1px solid purple;
    padding: 9px;
  }
}
.rosary-prayers-header .expand-icon,
.prayer-each-day-header .expand-icon,
.pope-st-gregory-header .expand-icon {
  display: none;
  padding-left: 10px;
  transition: 0.5s;
}
@media (max-width: 800px) {
  .rosary-prayers-header .expand-icon,
  .prayer-each-day-header .expand-icon,
  .pope-st-gregory-header .expand-icon {
    display: block;
  }
}
.rosary-prayers-header .flip,
.prayer-each-day-header .flip,
.pope-st-gregory-header .flip {
  transition: 0.5s;
  transform: rotate(180deg);
  padding-left: 0px;
  padding-right: 10px;
}
.active-header {
  border: 1px solid purple;
  padding: 9px;
}
.rosary-prayers-content,
.prayer-each-day-content,
.pope-st-gregory-content {
  display: block;
}
@media (max-width: 800px) {
  .rosary-prayers-content,
  .prayer-each-day-content,
  .pope-st-gregory-content {
    display: none;
    padding: 10px;
    margin: 0 2%;
    border: 0.5px solid purple;
    border-radius: 0 0 15px 15px;
    border-top: none;
  }
}
.novena-container h1 {
  background-color: rgba(115, 30, 194, 0.4);
  padding: 5px 0;
  font-weight: bold;
}
@media (max-width: 800px) {
  .novena-container h1 {
    text-align: center;
  }
}
.novena-container section {
  margin-bottom: 2rem;
}
.novena-container table {
  margin-top: 2rem;
  border-collapse: collapse;
  width: 900px;
  text-align: left;
}
@media (max-width: 800px) {
  .novena-container table {
    width: 100%;
  }
}
.novena-container tr:nth-child(even) {
  background-color: rgba(115, 30, 194, 0.05);
}
.novena-container td {
  padding-left: 1.5em;
  text-indent: -1.5em;
}
.novena-container .novena-options {
  display: flex;
  justify-content: center;
  padding-top: 20px;
  margin-bottom: 2rem;
}
@media (max-width: 425px) {
  .novena-container .novena-options {
    flex-direction: column;
  }
}
.novena-container .novena-options .novena-day {
  display: flex;
  margin-right: 20px;
}
@media (max-width: 425px) {
  .novena-container .novena-options .novena-day {
    align-self: center;
    margin-right: 0;
    margin-bottom: 2rem;
  }
}
.novena-container .novena-options .novena-length {
  display: flex;
}
@media (max-width: 425px) {
  .novena-container .novena-options .novena-length {
    align-self: center;
  }
}
.novena-container .verse {
  font-weight: bold;
}
.novena-container .resp {
  font-style: italic;
}
.novena-container .prayer-text {
  max-width: 900px;
  margin-top: 2rem;
}
@media (max-width: 800px) {
  .novena-container .prayer-text {
    margin: 2rem 8% 0;
  }
}
@media (max-width: 500px) {
  .novena-container .prayer-text {
    margin: 2rem 5% 0;
  }
}
.novena-container .ofhm {
  font-style: italic;
}
@media (max-width: 800px) {
  .novena-container .ofhm {
    text-align: center;
  }
}

